crystal-facet-uml (1.13.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * t.b.d.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 May 2019 20:30:00 +0200

crystal-facet-uml (1.12.1-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Packageing issues addressed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 15 May 2019 20:30:00 +0200

crystal-facet-uml (1.12.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Auto-Layouting of classifiers improved

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 27 Apr 2019 21:33:01 +0200

crystal-facet-uml (1.11.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * New version 1.11.0 exports docbook and html formats

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 10 Mar 2019 11:33:01 +0100

crystal-facet-uml (1.10.0-1ubuntu1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * New version 1.10.0 provides more classifiers for activity diagrams

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Feb 2019 17:32:01 +0100

crystal-facet-uml (1.9.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * New version 1.9.0 supports interfaces at components

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 17 Jan 2019 20:06:11 +0100

crystal-facet-uml (1.8.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * New version 1.8.0 supports re-ordering features and diagrams

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Jan 2019 08:57:14 +0100

crystal-facet-uml (1.7.1-1) UNRELEASED; urgency=medium

  * User documentation is generated from docbook.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 21 Nov 2018 21:00:00 +0100

crystal-facet-uml (1.7.0-1) UNRELEASED; urgency=medium

  * tree view allows to navigate interactively
  * new sibling and new child diagrams can be created in tree view
  * when deleting a diagram, unfocused windows show parent diagram
  * only local-scenario relationships are shown in timing, sequence
    and communication diagrams
