@@ -17,19 +17,20 @@
 {fprintf(stderr,"TEST FAILED at %s:%d\n",__FILE__,__LINE__);exit(-1);}
 
 #define TEST_ASSERT(COND)\
-if (!(COND))\
+if (!(COND)) \
 {fprintf(stderr,"TEST FAILED (!(%s)) at %s:%d\n",#COND,__FILE__,__LINE__);exit(-1);}
 
 #define TEST_ASSERT_EQUAL_INT(EXPECTED,ACTUAL)\
-{const int exp = (EXPECTED); const int act = (ACTUAL); if (exp!=act)\
+{const int exp = (EXPECTED); const int act = (ACTUAL); if (exp!=act) \
 {fprintf(stderr,"TEST FAILED ((%s)==%d!=%d==(%s)) at %s:%d\n",\
-#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);}\
+#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);} \
 }
 
 #define TEST_ASSERT_EQUAL_STRING(EXPECTED,ACTUAL)\
 {const char *exp = (EXPECTED); const char *act = (ACTUAL);\
-if ((exp==NULL)||(act==NULL)||(0!=strcmp(exp,act)))\
-{fprintf(stderr,"TEST FAILED ((%s)==%s!=%s==(%s)) at %s:%d\n",#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);}\
+if ((exp==NULL)||(act==NULL)||(0!=strcmp(exp,act))) \
+{fprintf(stderr,"TEST FAILED ((%s)==%s!=%s==(%s)) at %s:%d\n",\
+#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);} \
 }
 
 /* EPSILON(x) = 2.2204460493 e−016 */
@@ -40,9 +41,9 @@ if ((exp==NULL)||(act==NULL)||(0!=strcmp(exp,act)))\
 #define TEST_DOUBLE_TINIEST 4.94e-322
 #define TEST_ASSERT_EQUAL_DOUBLE(EXPECTED,ACTUAL)\
 {const double exp = (EXPECTED); const double act = (ACTUAL);\
-if ( fabs(exp-act) > ((fabs(exp)*TEST_DOUBLE_EPSILON)+TEST_DOUBLE_TINIEST) )\
+if ( fabs(exp-act) > ((fabs(exp)*TEST_DOUBLE_EPSILON)+TEST_DOUBLE_TINIEST) ) \
 {fprintf(stderr,"TEST FAILED ((%s)==%f!=%f==(%s)) at %s:%d\n",\
-#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);}\
+#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);} \
 }
 
 /* EPSILON(x) = 1.192092896 e-07 */
@@ -53,9 +54,9 @@ if ( fabs(exp-act) > ((fabs(exp)*TEST_DOUBLE_EPSILON)+TEST_DOUBLE_TINIEST) )\
 #define TEST_FLOAT_TINIEST 1.40e-43
 #define TEST_ASSERT_EQUAL_FLOAT(EXPECTED,ACTUAL)\
 {const float exp = (EXPECTED); const float act = (ACTUAL);\
-if ( fabs(exp-act) > ((fabs(exp)*TEST_FLOAT_EPSILON)+TEST_FLOAT_TINIEST) )\
+if ( fabs(exp-act) > ((fabs(exp)*TEST_FLOAT_EPSILON)+TEST_FLOAT_TINIEST) ) \
 {fprintf(stderr,"TEST FAILED ((%s)==%f!=%f==(%s)) at %s:%d\n",\
-#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);}\
+#EXPECTED,exp,act,#ACTUAL,__FILE__,__LINE__);exit(-1);} \
 }
 
 #endif  /* TEST_ASSERT_H */
