@@ -8,7 +8,7 @@
             <firstname>Andreas</firstname>
             <surname>Warnke</surname>
         </author>
-        <date>2019-06-12</date>
+        <date>2019-06-21</date>
     </articleinfo>
 
     <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="introduction.xml" />
