@@ -700,19 +700,19 @@
                         <row>
                             <entry><para>Communication Diagram</para></entry>
                             <entry><para>UML</para></entry>
-                            <entry><para>&TODO; unconditional relationships except containments(ro), unconditional features (Scenario)</para></entry>
+                            <entry><para>unconditional relationships except containments(ro), &TODO; unconditional features (Scenario)</para></entry>
                             <entry><para></para></entry>
                         </row>
                         <row>
                             <entry><para>Sequence Diagram</para></entry>
                             <entry><para>UML, SysML</para></entry>
-                            <entry><para>&TODO; unconditional relationships, unconditional features (Scenario)</para></entry>
+                            <entry><para>unconditional relationships, &TODO; unconditional features (Scenario)</para></entry>
                             <entry><para></para></entry>
                         </row>
                         <row>
                             <entry><para>Timing Diagram</para></entry>
                             <entry><para>UML</para></entry>
-                            <entry><para>&TODO; unconditional relationships, unconditional features (Scenario)</para></entry>
+                            <entry><para>unconditional relationships, &TODO; unconditional features (Scenario)</para></entry>
                             <entry><para></para></entry>
                         </row>
                     </tbody>
